--- a/html/ejercicio2.html
+++ b/html/ejercicio2.html
@@ -15,11 +15,13 @@
 
     <p>
         <ul>
-            <li> DIW </li>
-            <li> DWES </li>
-            <li> DWEC </li>
-            <li> DAW </li>
-            <li> EIE </li>
+            <li> Diseño de Interfaces Web </li>
+            <li> Desarrollo Web en Entorno Servidor </li>
+            <li> Desarrollo en Entorno Servidor </li>
+            <li> Despliegue de Aplicaciones Web </li>
+            <li> Empresa e Iniciativa Emprendedora </li>
+            <li> Proyecto de DAW</li>
+            <li> Formación en Centros de Trabajo</li>
         </ul>
     </p>
     
