--- a/html/ejercicio3.html
+++ b/html/ejercicio3.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 03</title>
 </head>
-<body>
+<body background="/imagen4.png">
 
-    <table border="1">
+    <center><table border="1">
         <tr>
-            <td  colspan="6" align="center" bgcolor="aquamarine">
+            <td  colspan="6" align="center">
                 HORARIO
             </td>
         </tr>
-        <tr bgcolor="orange">
-            <td>HORAS</td>
+        <tr bgcolor="yellow">
+            <td bgcolor="grey">HORAS</td>
             <td>LUNES</td>
             <td>MARTES</td>
             <td>MIERCOLES</td>
@@ -22,46 +22,46 @@
             <td>VIERNES</td>
         </tr>
         <tr>
-            <td bgcolor="orange">8 a 9</td>
-            <td bgcolor="lightblue">mates</td>
-            <td bgcolor="red">lengua</td>
-            <td bgcolor="lightgreen">inglés</td>
-            <td bgcolor="lightblue">mates</td>
-            <td bgcolor="red">lengua</td>
+            <td bgcolor="grey">8 a 9</td>
+            <td >mates</td>
+            <td >lengua</td>
+            <td >inglés</td>
+            <td >mates</td>
+            <td >lengua</td>
         </tr>
         <tr>
-            <td bgcolor="orange">10 a 11</td>
-            <td bgcolor="lightbrown">tecnología</td>
-            <td bgcolor="lightyellow">música</td>
-            <td bgcolor="green">biología</td>
-            <td bgcolor="lightyellow">música</td>
-            <td bgcolor="purple">física</td>
+            <td bgcolor="grey">10 a 11</td>
+            <td >tecnología</td>
+            <td >música</td>
+            <td >biología</td>
+            <td >música</td>
+            <td >física</td>
         </tr>
         <tr>
-            <td bgcolor="orange">11 a 12</td>
-            <td colspan="5" align="center">RECREO</td>
+            <td bgcolor="grey">11 a 12</td>
+            <td colspan="5" bgcolor="lightgrey">RECREO</td>
         </tr>
         <tr>
-            <td bgcolor="orange">12 a 13</td>
-            <td bgcolor="lightpink">ed. física</td>
-            <td bgcolor="lightblue">mates</td>
-            <td bgcolor="lightblue">mates</td>
-            <td bgcolor="lightbrown">tecnología</td>
-            <td bgcolor="lightpink">ed. física</td>
+            <td bgcolor="grey">12 a 13</td>
+            <td >ed. física</td>
+            <td >mates</td>
+            <td >mates</td>
+            <td >tecnología</td>
+            <td >ed. física</td>
         </tr>
         <tr>
-            <td bgcolor="orange">13 a 14</td>
-            <td bgcolor="green">biología</td>
-            <td bgcolor="lightgrey">quimica</td>
-            <td bgcolor="purple">fisica</td>
-            <td bgcolor="lightgreen">inglés</td>
-            <td bgcolor="lightblue">mates</td>
+            <td bgcolor="grey">13 a 14</td>
+            <td >biología</td>
+            <td >quimica</td>
+            <td >fisica</td>
+            <td >inglés</td>
+            <td >mates</td>
         </tr>
         <tr>
-            <td bgcolor="orange">14 a 15</td>
-            <td colspan="5">COMEDOR</td>
+            <td bgcolor="grey">14 a 15</td>
+            <td colspan="5" bgcolor="lightgrey">COMEDOR</td>
         </tr>
     </table>
-    
+</center>
 </body>
 </html>
