--- a/html/curriculum.html
+++ b/html/curriculum.html
@@ -1,11 +1,348 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="author" name="Ignacio Ormaeche Carral">
     <title>Curriculum</title>
 </head>
+
 <body>
-    
+    <table>
+        <tr>
+            <td> <img src="/caracurriculum.png" alt="cara"> </td>
+            <td>
+                <h1>Ignacio Ormaeche Carral</h1>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td><img src="/rojo1.png" alt="rojo" width="40px" height="auto"></td>
+            <td>
+                <h2>Información personal</h2>
+            </td>
+        </tr>
+    </table>
+    <hr>
+
+    <table width="50%">
+        <tr>
+            <td>Nombre: </td>
+            <td>Ignacio</td>
+        </tr>
+        <tr>
+            <td>Apellidos:</td>
+            <td>Ormaeche Carral</td>
+        </tr>
+        <tr>
+            <td>Fecha de nacimiento: </td>
+            <td>04/12/1997</td>
+        </tr>
+        <tr>
+            <td>Nacionalidad:</td>
+            <td>Español</td>
+        </tr>
+        <tr>
+            <td>Dirección:</td>
+            <td>Calle Pedro y Francisco González, s/n, 10600 Plasencia, Cáceres</td>
+        </tr>
+        <tr>
+            <td>E-mail:</td>
+            <td>iormaechec01@informatica.iesvalledeljerteplasencia.es</td>
+        </tr>
+        <tr>
+            <td>Número de teléfono: </td>
+            <td>666666666</td>
+        </tr>
+        <tr>
+            <td>Web: </td>
+            <td>https://iesvallejertepla.educarex.es/</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td><img src="/rojo2.png" alt="rojo2"></td>
+            <td>
+                <h2>Perfil</h2>
+            </td>
+        </tr>
+    </table>
+    <hr>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia id distinctio voluptas, natus possimus
+        suscipit, beatae reprehenderit placeat deserunt quam nemo eos ipsa perspiciatis tenetur!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos nulla temporibus voluptates reiciendis
+        eaque sed laudantium distinctio minima qui suscipit nam ab nobis aliquam necessitatibus, enim fuga soluta.
+        Molestias debitis magni iusto accusantium sed, facere fugiat voluptatem qui iste nemo omnis sunt, eveniet
+        modi doloremque dolore, minima voluptate nihil perspiciatis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, consequatur veniam! Quos ipsam ea ab!
+        Nostrum quisquam vitae quia alias ut pariatur voluptatem dolor, dolore, animi modi eos autem voluptates
+        repudiandae similique unde iure laboriosam enim temporibus quis molestias dolores blanditiis! Obcaecati quas
+        odit perferendis corrupti aspernatur exercitationem minima eligendi similique quae nihil quis commodi, odio
+        sequi sed adipisci nemo distinctio? Temporibus perspiciatis dicta et. Ratione alias laudantium nostrum eos
+        quos voluptatibus exercitationem velit repudiandae!</p>
+
+    <table>
+        <tr>
+            <td><img src="/rojo3.png" alt="rojo3"></td>
+            <td>
+                <h2>Educación y formación</h2>
+            </td>
+        </tr>
+    </table>
+    <hr>
+
+    <table width="50%">
+        <tr>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>Lorem.</td>
+            <td>2013 - 2015</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsum dolor sit amet.</td>
+            <td>Lorem, ipsum dolor.</td>
+            <td>2015 - 2019</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>Lorem ipsum dolor sit amet consectetur.</td>
+            <td>2019 - 2020</td>
+        </tr>
+        <tr>
+            <td>Lorem, ipsum dolor.</td>
+            <td>Lorem ipsum dolor sit amet consectetur.</td>
+            <td>Noviembre - Diciembre 2020</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>Lorem ipsum dolor sit amet.</td>
+            <td>2021 - 2023</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td><img src="/rojo4.png" alt="rojo4"></td>
+            <td>
+                <h2>Experiencia laboral</h2>
+            </td>
+        </tr>
+    </table>
+    <hr>
+
+    <table width="50%">
+        <tr>
+            <td>Lorem ipsum dolor sit amet.</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, dolorem!</td>
+            <td>Junio 2019</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, aperiam dolorum?</td>
+            <td>Junio - Julio 2021</td>
+        </tr>
+        <tr>
+            <td>Lorem, ipsum dolor.</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam impedit accusamus voluptates!</td>
+            <td>Junio - Julio 2022</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, sapiente!</td>
+            <td>Agosto 2023</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td><img src="/rojo5.png" alt="rojo5"></td>
+            <td>
+                <h2>Capacidades y aptitudes</h2>
+            </td>
+        </tr>
+    </table>
+    <hr>
+
+
+    <table width="100%">
+        <tr>
+            <td>
+                <center>
+                    <table>
+                        <tr>
+                            <td colspan="2" align="center">Idiomas</td>
+                        </tr>
+                        <tr>
+                            <td align="center">Inglés</td>
+                            <td> A2 EOI</td>
+                        </tr>
+                    </table>
+                </center>
+            </td>
+            <td>
+                <center>
+                    <table>
+                        <tr>
+                            <td colspan="2" align="center">Suites Ofimática</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem, ipsum.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris"></td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor sit.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris"></td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem, ipsum dolor.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris"></td>
+
+                        </tr>
+                    </table>
+                </center>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <center>
+                    <table>
+                        <tr>
+                            <td colspan="2" align="center">Sistemas Operativos</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem, ipsum dolor.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor sit.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                    </table>
+                </center>
+            </td>
+            <td>
+                <center>
+                    <table>
+                        <tr>
+                            <td colspan="2" align="center">Administración CMS/CLS</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem, ipsum dolor.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor sit.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor sit amet.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td>Lorem, ipsum.</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"> <img
+                                    src="/estrellitaGris.png" alt="estrGris"><img src="/estrellitaGris.png"
+                                    alt="estrGris">
+                            </td>
+
+                        </tr>
+                    </table>
+                </center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center>
+                    <table>
+                        <tr>
+                            <td colspan="2" align="center">Programación</td>
+                        </tr>
+                        <tr>
+                            <td>Java</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"><img
+                                    src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"><img
+                                    src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>PHP</td>
+                            <td><img src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja"><img src="/estrellitaRoja.png" alt="estrRoja"><img
+                                    src="/estrellitaRoja.png" alt="estrRoja"><img src="/estrellitaRoja.png"
+                                    alt="estrRoja">
+                            </td>
+                        </tr>
+                    </table>
+                </center>
+            </td>
+            <td></td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td><img src="/rojo6.png" alt="rojo6"></td>
+            <td><h2>Otros datos de interés</h2></td>
+        </tr>
+    </table>
+    <hr>
+
+    <ul>
+        <li>Carnet de conducir B</li>
+        <li>Vehículo propio</li>
+    </ul>
+
 </body>
+
 </html>
