--- a/html/diseñoSemantico.html
+++ b/html/diseñoSemantico.html
@@ -9,17 +9,17 @@
     <title>Diseño Semántico</title>
 </head>
 
-<body>
+<body style="width: 80vw;">
     <div id="1">
         <header>
             <h1 style="text-align: center;"><a href="http://www.estadionorte.com/"><img src="/img/estadioNorte.png" alt="logo"></a></h1>
-            <nav style="float: left; margin-right: 15px; margin-bottom: 100vh;">
-                <p><a href="http://www.estadionorte.com/p/resultados-y-clasificaciones.html">Resultados</a> </p>
-                <p> <a href="http://www.estadionorte.com/p/horarios.html">Horarios</a> </p> 
-                <p><a href="http://www.estadionorte.com/search/label/futbol?&max-results=8">Fútbol</a> </p> 
-                <p><a href="http://www.estadionorte.com/search/label/baloncesto?&max-results=8">Baloncesto</a> </p> 
-                <p><a href="http://www.estadionorte.com/search/label/atletismo?&max-results=8">Atletismo</a> </p> 
-                <p><a href="http://www.estadionorte.com/search/label/polideportivo?&max-results=8">Más deportes</a></p>
+            <nav style="float: left; margin-right: 15px; margin-bottom: 100%; background-color: aqua;">
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/p/resultados-y-clasificaciones.html">Resultados</a> </p>
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/p/horarios.html">Horarios</a> </p> 
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/search/label/futbol?&max-results=8">Fútbol</a> </p> 
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/search/label/baloncesto?&max-results=8">Baloncesto</a> </p> 
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/search/label/atletismo?&max-results=8">Atletismo</a> </p> 
+                <p><a style=" text-decoration: none;  color: black;" href="http://www.estadionorte.com/search/label/polideportivo?&max-results=8">Más deportes</a></p>
             </nav>
         </header>
 
