--- a/html/arte.html
+++ b/html/arte.html
@@ -8,22 +8,50 @@
 </head>
 <body>
     <div id="titulo">
-        CATÁLOGO DE ARTE
+        <h1>CATÁLOGO DE ARTE</h1>
+    </div>
+
+    <div id="entrada">
+        <p> Introduce los términos de búsqueda: </p> 
     </div>
 
     <form method="post">
-        <div id="entrada">
-            <label> Introduce los términos de búsqueda: </label> 
-        </div>
+
+
         <div id="fObra">
-            <h1><b>OBRA</b></h1>
-            <br>
+            <p><b>OBRA</b></p>
+            
             <label form="tituloObra">Titulo: </label>
             <input type="text" name="tituloObra">
             <br>
             <label form="autor">Autor: </label>
             <input type="text" name="autor">
         </div>
+
+        <div id="fTipo">
+            <p><b>TIPO</b></p>
+            
+            <input type="checkbox" name="tipo" value="esc">
+            <label form="tipo">Escultura</label>
+            <br>
+            <input type="checkbox" name="tipo" value="arq">
+            <label form="tipo">Arquitectura</label>
+            <br>
+            <input type="checkbox" name="tipo" value="pint">
+            <label form="tipo">Pintura</label>
+        </div>
+
+        <div id="fDisponibilidad">
+            <p><b>DISPONIBILIDAD</b></p>
+
+            <input type="radio" name="disp" value="publ">
+            <label form="disp">Museo / Acceso público</label>
+            <br>
+            <input type="radio" name="disp" value="priv">
+            <label form="disp">Colección privada</label>
+        </div>
+
+
     </form>
 </body>
 </html>
