--- a/maquetacion/ejemplo.html
+++ b/maquetacion/ejemplo.html
@@ -7,6 +7,12 @@
   <title>Maquetación HTML</title>
 </head>
 
+<style>
+  body {
+    background-color: lightgray;
+  }
+</style>
+
 <body>
   <div id="titulo">
     <h1>HTML 5 y CSS 3</h1>
@@ -18,7 +24,7 @@
 
   <div id="html">
     <img src="html5-logo.svg" alt="html">
-    <p>El 28 de octubre de 2014 se aprobó la Recomendación HTML 5, culminando así diez años de trabajo. En 2004 se formó
+    <p>El <span class="rojo">28 de octubre de 2014</span> se aprobó la <span class="subrayado">Recomendación HTML 5</span>, culminando así diez años de trabajo. En 2004 se formó
       el WHATWG, un grupo informal de individuos y empresas decididos a impulsar el desarrollo del HTML, que se
       encontraba bloqueado en el W3C desde el año 2000. En 2007 el W3C retomó el trabajo sobre el HTML y siete años
       después se alcanzó el objetivo.</p>
@@ -35,9 +41,9 @@
   <div id="css">
     <img src="css3-logo.svg" alt="css">
     <p>Desde la aprobación de CCS 2 en 1998, el W3C ha estado trabajando en la siguiente generación de las hojas de
-      estilo, las CSS 3. Las Recomendaciones CSS 3 se planificaron como un conjunto de recomendaciones en vez de como un
+      estilo, las CSS 3. Las <span class="subrayado">Recomendaciones CSS 3</span> se planificaron como un conjunto de recomendaciones en vez de como un
       documento único. El proceso ha resultado largo y poco productivo: las primeras recomendaciones CSS 3 no se
-      aprobaron hasta 2011.</p>
+      aprobaron hasta <span class="rojo">2011</span>.</p>
 
     <p>Aunque los navegadores admiten muchas características de CSS 3, la publicación de HTML 5 no ha acelerado el
       desarrollo de CSS 3.</p>
