--- a/maquetacion/ejemplo.html
+++ b/maquetacion/ejemplo.html
@@ -11,6 +11,31 @@
   body {
     background-color: lightgray;
   }
+  #titulo {
+    text-align: center;
+  }
+
+  .subtitulo {
+    background-color: gray;
+    color: white;
+    width: 90%;
+    height: auto;
+    text-align: left;
+    padding-left: 10px;
+    margin-left: 20px;
+  }
+
+  div > img {
+    float: left;
+    width: auto;
+    height: auto;
+    margin-right: 20px;
+  }
+
+  #html, #css {
+    margin: auto;
+  }
+
 </style>
 
 <body>
@@ -18,7 +43,7 @@
     <h1>HTML 5 y CSS 3</h1>
   </div>
 
-  <div id="subtitulo">
+  <div class="subtitulo">
     <h2>HTML 5</h2>
   </div>
 
@@ -34,7 +59,7 @@
   </div>
 
 
-  <div id="subtitulo">
+  <div class="subtitulo">
     <h2>CSS 3</h2>
   </div>
 
