--- a/maquetacion/ejemplo.html
+++ b/maquetacion/ejemplo.html
@@ -23,6 +23,7 @@
     text-align: left;
     padding-left: 10px;
     margin-left: 20px;
+    display: block;
   }
 
   div > img {
@@ -34,6 +35,7 @@
 
   #html, #css {
     margin: auto;
+
   }
 
 </style>
