--- a/tema05/ejer1/ejer1.html
+++ b/tema05/ejer1/ejer1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 2</title>
-    <link rel="stylesheet" href="../css/ejer2.css">
+    <title>Ejercicio 1</title>
+    <link rel="stylesheet" href="ejer1.css">
 </head>
 <body>
 
