--- a/proyecto/pagina1/login.html
+++ b/proyecto/pagina1/login.html
@@ -11,14 +11,17 @@
         <form action="#" method="post">
             <h2>Monfragüe</h2>
             <hr>
-            <input type="text" id="usuario" name="usuario" placeholder="Usuario">
-            <br>
+            <label form="usuario" name="nombre">Usuario: </label>
+            <input type="text" id="usuario" name="usuario" >
+
+            <label form="contra" name="contrasenia">Contraseña: </label>
             <input type="password" id="contra" name="contra" placeholder="Contraseña">
-            <br>
+
             <input type="button" id="boton" name="boton" value="Login">
+            <p>Sign up</p>
+            <p>¿Has olvidado tu contraseña?</p>
         </form>
-        <p>Sign up</p>
-        <p>¿Has olvidado tu contraseña?</p>
+
     </div>
 </body>
 </html>
