--- a/proyecto/pagina1/login.html
+++ b/proyecto/pagina1/login.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="formulario">
+        <div>
+            <img src="../imagenes/logoMon.png" alt="logo">
+        </div>
         <form action="#" method="post">
-            <h2>Monfragüe</h2>
+            <h2>Iniciar sesión</h2>
             <hr>
             <label form="usuario" name="nombre">Usuario: </label>
             <input type="text" id="usuario" name="usuario" >
