--- a/proyecto/Login/login.html
+++ b/proyecto/Login/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="formulario">
         <div>
-            <img src="../imagenes/logoMon.png" alt="logo">
+            <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
         </div>
         <form action="#" method="post">
             <h2>Iniciar sesión</h2>
@@ -18,11 +18,11 @@
             <input type="text" id="usuario" name="usuario" >
 
             <label form="contra" name="contrasenia">Contraseña: </label>
-            <input type="password" id="contra" name="contra" placeholder="Contraseña">
+            <input type="password" id="contra" name="contra" placeholder="*********">
 
-            <input type="button" id="boton" name="boton" value="Login">
-            <p>Sign up</p>
-            <p>¿Has olvidado tu contraseña?</p>
+            <button class="button">Login</button>
+            <button class="button">Sign up</button>
+            <p><a href="#">¿Has olvidado tu contraseña?</a></p>
         </form>
 
     </div>
