--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -8,8 +8,7 @@
 <body>
     <main>
         <ul>
-            <li>Iniciar Sesión</li>
-            <li>Algo 1</li>
+            <li><a href="Login/login.html">Login</a></li>
             <li>Algo 2</li>
         </ul>
     </main>
