--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <main>
-        <ul>
-            <li><a href="Login/login.html">Login</a></li>
-            <li>Algo 2</li>
-        </ul>
-    </main>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Fauna</a></li>
+                <li><a href="#">Flora</a></li>
+                <li><a href="#">Rutas</a></li>
+                <li><a href="Login/login.html">Iniciar Sesión</a></li>
+                <li><a href="#">Registrarse</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="content">
+        <h1>Bienvenido a Monfragüe</h1>
+        <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
+            ofrecer.</p>
+        <h2>Fauna</h2>
+        <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
+            ibérica y el buitre negro.</p>
+        <h2>Flora</h2>
+        <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
+            único.</p>
+        <h2>Rutas</h2>
+        <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
+            vistas panorámicas inolvidables.</p>
+    </section>
+
+    <footer>
+        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
+                Extremadura</a> para obtener más información.</p>
+    </footer>
+
 </body>
+
 </html>
