--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -11,6 +11,10 @@
 <body>
 
     <header>
+        <img src="imagenes/logoMon_SinFondo.png" alt="logo">
+    </header>
+
+    <div class="menu">
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -21,7 +25,7 @@
                 <li><a href="#">Registrarse</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <section id="content">
         <h1>Bienvenido a Monfragüe</h1>
