--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -12,9 +12,7 @@
 
     <header>
         <img src="imagenes/logoMon_SinFondo.png" alt="logo">
-    </header>
-
-    <div class="menu">
+        <hr>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -25,12 +23,15 @@
                 <li><a href="#">Registrarse</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <section id="content">
         <h1>Bienvenido a Monfragüe</h1>
         <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
-            ofrecer.</p>
+            ofrecer.
+            <br>
+            <img src="imagenes/723px-Monfrague_pan.jpg" alt="img1">
+        </p>
         <h2>Fauna</h2>
         <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
             ibérica y el buitre negro.</p>
